# Graphics

./: .gitignore  CMakeLists.txt  Makefile  README.md  fragment.glsl  glad.c  main  main.cpp  shader.h  vertex.glsl
include/glad/: glad.h
